--- a/src/index.css
+++ b/src/index.css
@@ -68,5 +68,39 @@
   background: linear-gradient(89.97deg, #ae67fa 1.84%, #f49867 102.67%);
   border: 1px solid #000000;
   box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
-  border-radius: 10.7236px;
+}
+
+.header__gradient1 {
+  width: 1013px;
+  height: 1013px;
+  background: #002853;
+  filter: blur(282px);
+}
+
+.header__gradient2 {
+  background: #07325f;
+  filter: blur(282px);
+  width: 701px;
+  height: 496px;
+}
+
+.feature__gradient {
+  background: #072d56;
+  filter: blur(282px);
+  width: 777px;
+  height: 777px;
+}
+
+.feature__gradient1 {
+  background: #0f4279;
+  filter: blur(60px);
+  width: 581px;
+  height: 410px;
+}
+
+.feature__gradient2 {
+  background: #1b78de;
+  filter: blur(100px);
+  width: 623px;
+  height: 558px;
 }
